--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -6,7 +6,7 @@
             <p>
                 <strong>Edwards Aquifer Authority</strong>
                 <br/>
-                <a class="custom-email" href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a>
+                <a href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a>
                 <br/>Phone: (210) 222-2204 or 1-800-292-1047
                 <br/>Fax: (210) 222-9869
                 <br/>
