--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -1,19 +1,14 @@
-/********
-* ABOUT *
-*********/
-.about {
-  /*margin-bottom: 10em;*/
-}
+@charset "utf-8";
 .embededVideo {
   /*border: 1px solid #fff;*/
-  margin: 1em auto 1em auto;
-  width: 45em;
-  height: 30em;
+  margin: 1rem auto 1rem auto;
+  width: 45rem;
+  height: 30rem;
 }
 #imageLeft {
   background-image: url(../images/about/concept-01-opt.jpg);
   display: inline-block;
-  margin: 1em; /*auto 1em auto;*/
+  margin: 1rem 2rem 1rem 1rem; /*auto 1rem auto;*/
   height: 276px; 
   width: 342px; 
   border: 1px solid black;
@@ -21,27 +16,27 @@
 #imageRight {
   background-image: url(../images/about/concept-02-opt.jpg);
   display: inline-block;
-  margin: 1em; /*auto 1em auto;*/
+  margin: 1rem 1rem 1rem 2rem; /*auto 1rem auto;*/
   height: 276px; 
   width: 342px; 
   border: 1px solid black;
 }
 .quotebox {
   border: 1px solid #8F8100; /* #AB650D; */
-  -webkit-border-radius: 0 4em 0;
-  -moz-border-radius: 0 4em 0;
-  border-radius: 0 4em 0;
-  padding: 1em;
+  -webkit-border-radius: 0 4rem 0;
+  -moz-border-radius: 0 4rem 0;
+  border-radius: 0 4rem 0;
+  padding: 1rem;
 }
 .quoted {
-  margin: 0 4em 0 3em;
+  margin: 0 4rem 0 3rem;
   font-style: italic;
   color: #71B2C9; /*#71B2C9; #4298B5;*/
   text-align: justify;
 }
 .quotedby {
   margin-left: 65%;
-  padding-top: 1em;
-  font-size: .8em;
+  padding-top: 1rem;
+  font-size: .8rem;
   color: #aaa;
 }
