--- a/app/styles/mq-hd.css
+++ b/app/styles/mq-hd.css
@@ -5,6 +5,8 @@
   html { font-size: 22px; }
   /* Nav */
   .apptitle { font-size: 1.3rem; }
+  /* Explore */
+  /*video#bgvid { width: 1920; height: 1080; }*/
   /* Parallax */
   /* Caves & Karts */
   #ck-slide0 {
