--- a/app/styles/mq-large.css
+++ b/app/styles/mq-large.css
@@ -6,6 +6,8 @@
   body { padding-top: 5.6rem; }
   /* Nav */
   .apptitle { font-size: 1.6rem; }
+  /* Explore */
+  /*video#bgvid { width: 1920; height: 1080; }*/
   /* Parallax */
   .slide { padding-left: 1rem; }
   /* Caves & Karts */
