--- a/app/styles/mq-small.css
+++ b/app/styles/mq-small.css
@@ -9,6 +9,8 @@
       font-size: 2rem;
       top: .1rem;
   }
+  /* Explore */
+  /*video#bgvid { width: 1920; height: 1080; }*/
   /* Parallax */
   .slide { padding-left: .8rem; }
   /* Caves & Karts */
