--- a/app/styles/mq-xlarge.css
+++ b/app/styles/mq-xlarge.css
@@ -6,6 +6,8 @@
   body { padding-top: 2.6rem; }
   /* Nav */
   .apptitle { font-size: 1.4rem; }
+  /* Explore */
+  /*video#bgvid { width: 1920; height: 1080; }*/
   /* Parallax */
   /* Caves & Karts */
   #ck-slide0 {
