--- a/app/styles/about.css
+++ b/app/styles/about.css
@@ -22,6 +22,7 @@
   border: 1px solid black;
 }
 .quotebox {
+  margin-top: 1rem;
   border: 1px solid #8F8100; /* #AB650D; */
   -webkit-border-radius: 0 4rem 0;
   -moz-border-radius: 0 4rem 0;
