--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -1,12 +1,12 @@
 <div class="container">
 	<div class="explore">
-    <h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1>
+    <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div>
     <div class="centered">
-      <video id="bgvid" controls preload autoplay loop muted volume="0">
-        <source src="../videos/San Marcos Springs_2.mp4" type="video/mp4">
+      <video id="bgvid" controls preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
+        <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
       </video>
-      <eaa-aquifers-map></eaa-aquifers-map>
+      <div class="map-view"><eaa-aquifers-map></eaa-aquifers-map></div>
     </div>
 	</div>
 </div>
-<!-- <texas-eaa-aquifers data="shared.data" on-click="chartClicked()"></texas-eaa-aquifers> -->
