All video footage is integrated. All main images are in place with proper text and rendering. Still need secondary images and interactives. Otherwise very close now.

--- a/app/styles/caves-karsts.css
+++ b/app/styles/caves-karsts.css
@@ -18,8 +18,20 @@
   border-color: #777;
 }
 #ck-slide6 p:first-child {
-  border-color: #C6930A;
+  border-color: #AB650D;
 }
 #ck-slide7 p:first-child {
+  border-color: #C6930A;
+}
+#ck-slide8 p:first-child {
   border-color: #AB650D;
+}
+video.bgv-ck-slide1 {
+  background: url(../images/caves_karsts/SecoSinkhole.jpg) no-repeat;
+}
+video.bgv-ck-slide3 {
+  background: url(../images/caves_karsts/DrainageArea.jpg) no-repeat;
+}
+video.bgv-ck-slide5 {
+  background: url(../images/caves_karsts/CaveEntrance.jpg) no-repeat;
 }
