--- a/app/views/explore.html
+++ b/app/views/explore.html
@@ -2,11 +2,11 @@
 	<div class="explore">
     <div class="outline"><h1>Explore the Edwards Aquifer<br/><small>Select a location within the San Antonio Segment of the Balcones Fault Zone</small></h1></div>
     <div class="centered">
-      <video id="bgvid" controls preload="auto" autoplay loop muted volume="0">
+      <video class="bgvideo bgvexplore" preload="auto" autoplay loop muted> <!-- poster="../images/explore/HCPSanMarcosRiver-loop3.jpg"  -->
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.webm" type="video/webm">
         <source src="../videos/720p/HCPSanMarcosRiver-loop3.mp4" type="video/mp4">
       </video>
-      <div class="map-view"><eaa-aquifers-map></eaa-aquifers-map></div>
+      <div class="map-backing"><eaa-aquifers-map></eaa-aquifers-map></div>
     </div>
 	</div>
 </div>
