--- a/app/styles/explore.css
+++ b/app/styles/explore.css
@@ -1,15 +1,6 @@
 @charset "utf-8";
-video#bgvid {
-    position: fixed;    
-    width: auto;
-    height: auto;
-    z-index: -100;
-    background: url(../videos/720p/HCPSanMarcosRiver-loop3.jpg) no-repeat;
-    background-size: cover;
-    right: 0;
-    bottom: 0;
-    min-height: 100%;
-    min-width: 100%;
+video.bgvexplore {
+    background: url(../images/explore/HCPSanMarcosRiver-loop3.jpg) no-repeat;
   }
 .outline h1,small {
   text-shadow:
@@ -27,7 +18,7 @@ video#bgvid {
   color: #fff;
   font-weight: 700;
 }
-.map-view {
+.map-backing {
   margin-top: 3%;
   margin-left: auto;
   margin-right: auto;
