--- a/app/styles/general.css
+++ b/app/styles/general.css
@@ -36,3 +36,15 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
 }
+.bgvideo {
+    position: fixed;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    background: #000;
+    background-size: cover;
+    right: 0;
+    bottom: 0;
+    min-height: 100%;
+    min-width: 100%;
+  }
