--- a/app/styles/mq-medium.css
+++ b/app/styles/mq-medium.css
@@ -14,35 +14,39 @@
     background-image: url(../images/caves_karsts/DSC_0318_web_md.jpg);
   }
   #ck-slide1 {
-    background-color: #222;
+    /*background-color: #222;*/
   }
   #ck-slide2 {
     background-image:url(../images/caves_karsts/For-Doty1_1280x979_web_md.jpg);
   }
   #ck-slide3 {
-    background-color: #222;
+    /*background-color: #222;*/
   }
   #ck-slide4 {
     background-image:url(../images/caves_karsts/edwards-limestone_web_md.jpg);
   }
   #ck-slide5 {
-    background-color: #222;
+    /*background-color: #222;*/
   }
   #ck-slide6 {
-    background-image:url(../images/caves_karsts/valdina_8r_web_md.jpg);
+    background-color: #555;
   }
   #ck-slide7 {
-    background-image:url(../images/caves_karsts/Valdina_Farms_Cave_IMG0017_web_md.jpg);
+    background-image:url(../images/caves_karsts/valdina_8r_web_md.jpg);
   }
   #ck-slide8 {
+    background-image:url(../images/caves_karsts/Valdina_Farms_Cave_IMG0017_web_md.jpg);
+  }
+  #ck-slide9 {
     background-color: #000;
   }
   /* Conservation */
   #cons-slide0 {
-    background-image: url(../images/conservation/07Jul_PumpStation_CMYK_web_md.jpg);
+    
   }
   #cons-slide1 {
-    background-image: url(../images/conservation/XO5J7652_web_md.jpg);
+    /*background-image: url(../images/conservation/XO5J7652_web_md.jpg);*/
+    background-image: url(../images/conservation/07Jul_PumpStation_CMYK_web_md.jpg);
   }
   #cons-slide2 {
     background-image: url(../images/conservation/EAAgilleland_web_md.jpg);
@@ -54,38 +58,41 @@
     background-image: url(../images/conservation/08Aug_Landa_CMYK_web_md.jpg);
   }
   #cons-slide5 {
-    background-image: url(../images/conservation/SM_salamander_XO5J9266_web_md.jpg);
+    /*background-image: url(../images/conservation/SM_salamander_XO5J9266_web_md.jpg);*/
+    background-image: url(../images/conservation/EAAOborny20120710_md.jpg);
   }
   #cons-slide6 {
-    background-image: url(../images/conservation/Board-Room-corner_Panorama1-P_web_md.jpg);
+    /*background-image: url(../images/conservation/Board-Room-corner_Panorama1-P_web_md.jpg);*/
+    background-image: url(../images/conservation/HIGH-RESOLUTION-BOARD_md.jpg);
   }
   #cons-slide7 {
-    background-image: url(../images/conservation/EAA-rainGauge_web_md.jpg);
+    /*background-image: url(../images/conservation/EAA-rainGauge_web_md.jpg);*/
   }
   #cons-slide8 {
     background-color: #eee;
   }
   #cons-slide9 {
-    background-image: url(../images/conservation/GBRA_20121017_6763_web_md.jpg);
+    /*background-image: url(../images/conservation/GBRA_20121017_6763_web_md.jpg);*/
+    background-image: url(../images/conservation/Melani-Howard20120502_md.jpg);
   }
   #cons-slide10 {
     background-color: #000;
   }
   /* Springs */
   #springs-slide0 {
-    background-image: url(../images/springs/com-springs2_web_md.jpg);
+    /*background-image: url(../images/springs/com-springs2_web_md.jpg);*/
   }
   #springs-slide1 {
-    background-image: url(../images/springs/waterfall_web_md.jpg);
+    /*background-image: url(../images/springs/waterfall_web_md.jpg);*/
   }
   #springs-slide2 {
-    background-image: url(../images/springs/Boat_0054_web_md.jpg);
+    /*background-image: url(../images/springs/Boat_0054_web_md.jpg);*/
   }
   #springs-slide3 {
     background-image:url(../images/springs/aerial_view_web_md.jpg);
   }
   #springs-slide4 {
-    background-image: url(../images/springs/Looking-Underwater_0017_web_md.jpg);
+    /*background-image: url(../images/springs/Looking-Underwater_0017_web_md.jpg);*/
   }
   #springs-slide5 {
     background-image: url(../images/springs/EAAaquarena20120702_8316_web_md.jpg);
