--- a/app/styles/springs.css
+++ b/app/styles/springs.css
@@ -37,3 +37,15 @@
 .navLinkHcp:hover {
   color: #E6D395; 
 }
+video.bgv-springs-slide0 {
+  background: url(../images/springs/SpringFlow.jpg) no-repeat;
+}
+video.bgv-springs-slide1 {
+  background: url(../images/springs/ComalSpringsRun.jpg) no-repeat;
+}
+video.bgv-springs-slide2 {
+  background: url(../images/springs/SpringRun.jpg) no-repeat;
+}
+video.bgv-springs-slide4 {
+  background: url(../images/springs/SanMarcosSprings.jpg) no-repeat;
+}
