--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -10,12 +10,16 @@
 
 	<!-- Slide 1 -->
 	<div data-parallax-background class="slide" id="ck-slide1" data-slide="1" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Waterflow</h1></span> -->
+	  <!-- <span class="slideno"><h1>Waterflow</h1></span> -->
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>
-		</div>      
-	</div>
+      <p alt="">For millions of years, water has transformed the landscape of the Balcones Fault Zone in South Central Texas, creating the Edwards Aquifer and the hundreds of caves and karst features within the limestone.</p>   
+      <video class="plxbgvideo bgv-ck-slide1" poster="../images/caves_karsts/SecoSinkhole.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/SecoSinkhole.webm" type="video/webm">
+        <source src="../videos/720p/SecoSinkhole.mp4" type="video/mp4">
+      </video>
+    </div>    
+  </div>
 
 	<!-- Slide 2 -->
 	<div data-parallax-background class="slide" id="ck-slide2" data-slide="2" data-parallax-ratio="0.5">
@@ -32,6 +36,10 @@
     <a class="button-scroll" data-slide="4" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">In the Drainage Area, water emerges from numerous small springs along the Edwards Plateau to create the baseflow for rivers that add recharge to the aquifer.  Strong thunderstorms fill the normally dry riverbeds of the Texas Hill Country.</p>
+      <video class="plxbgvideo bgv-ck-slide3" poster="../images/caves_karsts/DrainageArea.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/DrainageArea.webm" type="video/webm">
+        <source src="../videos/720p/DrainageArea.mp4" type="video/mp4">
+      </video>
 		</div>
 	</div>
 
@@ -50,20 +58,33 @@
     <a class="button-scroll" data-slide="6" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">The pores created in the rock can range in size from microscopic to several feet in diameter—such as this 40ft wide sinkhole in Medina County, Texas.</p>
-		</div>   
+      <video class="plxbgvideo bgv-ck-slide5" poster="../images/caves_karsts/CaveEntrance.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/CaveEntrance.webm" type="video/webm">
+        <source src="../videos/720p/CaveEntrance.mp4" type="video/mp4">
+      </video>
+    </div>   
 	</div>
 
-	<!-- Slide 6 -->
-	<div data-parallax-background class="slide" id="ck-slide6" data-slide="6" data-parallax-ratio="0.5">
-		<!-- <span class="slideno"><h1>Descent</h1></span>             -->
+  <!-- Slide 6 -->
+  <div data-parallax-background class="slide" id="ck-slide6" data-slide="6" data-parallax-ratio="0.5">
+    <span class="slideno"><h1>Recharge Data Interactive</h1></span>            
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
+    <div class="wrapper">
+      <p alt="">A data interactive module based on annual recharge gauge data.</p>
+    </div>  
+  </div>
+
+	<!-- Slide 7 -->
+	<div data-parallax-background class="slide" id="ck-slide7" data-slide="7" data-parallax-ratio="0.5">
+		<!-- <span class="slideno"><h1>Descent</h1></span>             -->
+    <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
 		</div>  
 	</div>
 
-	<!-- Slide 7 -->
-	<div data-parallax-background class="slide" id="ck-slide7" data-slide="7" data-parallax-ratio="0.5">
+	<!-- Slide 8 -->
+	<div data-parallax-background class="slide" id="ck-slide8" data-slide="8" data-parallax-ratio="0.5">
 		<!-- <span class="slideno"><h1>Watertable</h1></span>                 -->
     <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
@@ -71,8 +92,8 @@
 		</div> 
 	</div>
 
-	<!-- Slide 8 -->
-	<div data-parallax-background class="slide" id="ck-slide8" data-slide="8" data-parallax-ratio="0.5">
+	<!-- Slide 9 -->
+	<div data-parallax-background class="slide" id="ck-slide9" data-slide="9" data-parallax-ratio="0.5">
 		<span class="slideno"><h1>End</h1></span>                  
     <div class="wrapper">
 		</div> 
