--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -5,6 +5,10 @@
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">As a vital resource to more than two million South Central Texans, the Edwards Aquifer is shared by municipal, industrial, agricultural and recreational users. As such, the conservation and protection measures instituted by the EAA and regional stakeholders strive to preserve both water quantity and quality to sustain the aquifer and it’s species for future generations to enjoy.</p>
+      <video class="plxbgvideo bgv-cons-slide0" poster="../images/conservation/HCPSanMarcos.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/HCPSanMarcos.webm" type="video/webm">
+        <source src="../videos/720p/HCPSanMarcos.mp4" type="video/mp4">
+      </video>
     </div>     
 	</div>
 
@@ -68,12 +72,16 @@
     <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">The 1950’s drought of record brought historically low aquifer and spring flow levels to South Texas.  Today, a similar drought—coupled with a larger population and pumping demands—could have devastating effects on the aquifer.  Drought management plans mandated by the EAA reduce pumping during critical period to as much as 44% in the most severe stage of drought.</p>
+      <video class="plxbgvideo bgv-cons-slide7" poster="../images/conservation/HCPSpringLake.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/HCPSpringLake.webm" type="video/webm">
+        <source src="../videos/720p/HCPSpringLake.mp4" type="video/mp4">
+      </video>
     </div>
 	</div>
 
   <!-- Slide 8 -->
   <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Data Slide</h1></span>                -->
+    <span class="slideno"><h1>Well Data Interactive</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <!-- <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map> -->
