--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -5,6 +5,10 @@
     <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p>
+      <video class="plxbgvideo bgv-springs-slide0" poster="../images/springs/SpringFlow.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/SpringFlow.webm" type="video/webm">
+        <source src="../videos/720p/SpringFlow.mp4" type="video/mp4">
+      </video>
     </div>     
   </div>
 
@@ -14,6 +18,10 @@
     <a class="button-scroll" data-slide="2" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Spring flow is dependant upon recharge and conservation.  Declining aquifer leves can result in reduced flow, or no flow if water levels drop below the elevation of the spring openings.</p>
+      <video class="plxbgvideo bgv-springs-slide1" poster="../images/springs/ComalSpringsRun.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/ComalSpringsRun.webm" type="video/webm">
+        <source src="../videos/720p/ComalSpringsRun.mp4" type="video/mp4">
+      </video>
     </div>     
   </div>
 
@@ -23,6 +31,10 @@
     <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Spring water provides habitat for aquifer species, water for downstream users, and fresh inflows for the bays and estuaries along the Texas Gulf Coast.</p>
+      <video class="plxbgvideo bgv-springs-slide2" poster="../images/springs/SpringRun.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/SpringRun.webm" type="video/webm">
+        <source src="../videos/720p/SpringRun.mp4" type="video/mp4">
+      </video>
     </div>    
   </div>
 
@@ -41,6 +53,10 @@
     <a class="button-scroll" data-slide="5" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">Beneath the lake, numerous springs emerge along a common fault line propelling millions of gallons of water to the surface daily.</p>
+      <video class="plxbgvideo bgv-springs-slide4" poster="../images/springs/SanMarcosSprings.jpg" preload="auto" autoplay loop muted volume="0">
+        <source src="../videos/720p/SanMarcosSprings.webm" type="video/webm">
+        <source src="../videos/720p/SanMarcosSprings.mp4" type="video/mp4">
+      </video>
     </div>   
   </div>
 
@@ -55,10 +71,10 @@
 
   <!-- Slide 6 -->
   <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <!-- <span class="slideno"><h1>Video 4</h1></span>          -->
+    <span class="slideno"><h1>Spring Data Interactive</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Divers insert the pump directly into the spring opening to take the most accurate water quality readings.</p>
+      <p alt="">A data interactive module based on annual spring gauge data.</p>
     </div>
   </div>
 
