--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,21 +1,17 @@
 <div class="container">
     <div class="contact">
         <h1>Contact EAA<br/><small>Stay informed about your aquifer</small></h1>
-        <br/>
         <div class="contact">
             <p>
-                <strong>Edwards Aquifer Authority</strong>
-                <br/>
-                <a href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a>
-                <br/>Phone: (210) 222-2204 or 1-800-292-1047
-                <br/>Fax: (210) 222-9869
-                <br/>
-                <em>
-                    900 E. Quincy
-                    <br/>
-                    San Antonio, TX 78215
-                    <br/>
-                </em>
+                <h3>Edwards Aquifer Authority</h3>
+                <p><span class="glyphicon glyphicon-envelope glyph-spacing-right"></span><a href="mailto:info@edwardsaquifer.org?Subject=Aquiferium%20Question" target="_blank">info@edwardsaquifer.org</a></p>
+                <p><span class="glyphicon glyphicon-earphone glyph-spacing-right"></span>Phone: (210) 222-2204 or 1-800-292-1047</p>
+                <p><span class="glyphicon glyphicon-send glyph-spacing-right"></span>Fax: (210) 222-9869</p>
+                <p><span class="glyphicon glyphicon-home glyph-spacing-right"></span>              
+                <span class="address-block-line1">900 E. Quincy</span>
+                <br>
+                <span class="address-block-line2">San Antonio, TX 78215</span>
+                </p>
             </p>
         </div>
         <br/>
