--- a/app/views/springs.html
+++ b/app/views/springs.html
@@ -2,14 +2,17 @@
   <!-- Slide 0 -->
   <div data-parallax-background class="slide" id="springs-slide0" data-slide="0" data-parallax-ratio="0.5">
     <!-- <span class="slideno"><h1>Comal Springs</h1></span> -->
-    <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a>
+    <a class="button-scroll" data-slide="1" title="" data-ng-click="buttonClick($event)"></a> 
     <div class="wrapper">
       <p alt="">Cool, clear Edwards Aquifer water emerges at Comal Springs, as natural artesian pressure forces the water up the faults and fractures in the overlying rocks.</p>
       <video class="plxbgvideo bgv-springs-slide0" poster="../images/springs/SpringFlow.jpg" preload="auto" autoplay loop muted volume="0">
         <source src="../videos/720p/SpringFlow.webm" type="video/webm">
         <source src="../videos/720p/SpringFlow.mp4" type="video/mp4">
       </video>
-    </div>     
+    </div>
+    <img class="overlay overlay-left" src="../images/springs/com-springs2-800x.jpg" data-stellar-ratio="2.0" data-stellar-vertical-offset="50" alt="">
+    <!-- <img class="overlay overlay-center" src="../images/springs/comal-springs3-800x.jpg" data-stellar-ratio="1.3" data-stellar-vertical-offset="0" alt=""> -->
+    <img class="overlay overlay-right" src="../images/springs/comal-springs3-800x.jpg" data-stellar-ratio="2.0" data-stellar-vertical-offset="50" alt=""> 
   </div>
 
   <!-- Slide 1 -->
@@ -71,10 +74,10 @@
 
   <!-- Slide 6 -->
   <div data-parallax-background class="slide" id="springs-slide6" data-slide="6" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Spring Data Interactive</h1></span>         
+    <span class="slideno"><h1>Spring Gauge Data Interactive</h1></span>         
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">A data interactive module based on annual spring gauge data.</p>
+      <!-- <p alt="">A data interactive module based on annual spring gauge data.</p> -->
     </div>
   </div>
 
@@ -99,9 +102,9 @@
   <!-- Slide 9 -->
   <div data-parallax-background class="slide" id="springs-slide9" data-slide="9" data-parallax-ratio="0.5">
     <!-- <span class="slideno"><h1>Habitat Conservation</h1></span>               -->
-    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <a class="button-scroll reverse" id="" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a class="navLinkHcp" href="{{hcpurl}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(hcpurl)">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
+      <p alt="">To protect the endangered species long term the EAA, its regional partners, and stakeholders have implemented a comprehensive <a class="nav-link-hcp" href="{{urlHcp}}" title="Habitat Conservation Plan" target="_blank" ng-click="linkModelFunc(urlHcp)">Habitat Conservation Plan</a> to protect spring flow, water quality, and riparian habitat.</p>
     </div>
   </div>
 
