--- a/app/styles/parallax.css
+++ b/app/styles/parallax.css
@@ -14,23 +14,25 @@
 }
 .slide p:first-child {
   position: absolute;
-  top: 10%;
-  left: 3%;
-  width: 50%;
+  top: 2rem;
+  left: 3rem;
+  width: 70%;
   color: #fff;
   background-color: #111;
   box-shadow: 0 0 1rem #000;
-  border: 1px solid #fff;
+  border: 2px solid #fff;
   -webkit-border-radius: 0 4rem 0;
   -moz-border-radius: 0 4rem 0;
-  border-radius: 0 4rem 0;
-  padding: 1rem 2rem 1rem 2rem;
+  border-radius: 0 6rem 0;
+  padding: 1rem 3rem 1rem 3rem;
   opacity: 0.85;
   text-shadow: 1px 1px 1px #000;
   text-align: justify;
 }
 .slideno {
   position: absolute;
+  top: 0.5rem;
+  left: 8rem;
   color: rgba(255, 255, 255, 1);
   text-shadow:
     -1px -1px 0 #000,  
@@ -51,12 +53,12 @@
   width: 50px;
   height: 50px;
   position: absolute;
-  top: 10%;
-  left: 2%;
+  top: 2rem;
+  left: 2rem;
   z-index: 10;
   width: 0; 
   height: 0; 
-  border-top: 2rem solid rgba(175, 175, 175, 0.6);   /* #4298B5; #425968; rgba(255, 255, 255, 1); rgba(0, 0, 0, .7); rgba(119, 119, 119, 0.7); */
+  border-top: 2rem solid rgba(255, 255, 255, 0.6);   /* #4298B5; #425968; rgba(255, 255, 255, 1); rgba(0, 0, 0, .7); rgba(119, 119, 119, 0.7); */
   border-left: 2rem solid transparent;
   border-right: 2rem solid transparent;
   -webkit-animation-name: 'pulse_animation';
@@ -69,15 +71,15 @@
   cursor:pointer;
   width: 0; 
   height: 0; 
-  border-top: 2rem solid rgba(255, 255, 255, 0.6);   /*  #71B2C9 also rgba(113, 178, 201, 1); rgba(0, 0, 0, 1); #AB650D*/  
+  border-top: 2rem solid rgba(255, 255, 255, 1);   /*  #71B2C9 also rgba(113, 178, 201, 1); rgba(0, 0, 0, 1); #AB650D*/  
   border-left: 2rem solid transparent;
   border-right: 2rem solid transparent;
 }
 .button-scroll:hover, .button-scroll:hover:after {
    box-shadow: none;
 }
-#reverse {
-  top: 8.6%;
+.reverse {
+  top: 1rem;
   left: 0;
   behavior:url(-ms-transform.htc);
   /* Firefox */
@@ -105,9 +107,8 @@
     overflow: hidden;
   }
 .wrapper {
-  width: 100%;
-  min-width: 100%;
-  height: 900px;
+  width: auto;
+  height: 55rem;
   position: relative;
   margin: 0rem 0rem 0rem 3.2rem;
 }
