--- a/app/views/caves-karsts.html
+++ b/app/views/caves-karsts.html
@@ -26,7 +26,7 @@
 		<!-- <span class="slideno"><h1>Location</h1></span> -->
     <a class="button-scroll" data-slide="3" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.</p>
+      <p alt="">Beginning along the Southern edge of the Edwards Plateau, the 5,400 square mile Drainage Area funnels water into streams and creeks that flow south toward the Recharge Zone—the outcrop of the Edwards Limestone.<br><span class="address-lookup"><span class="glyphicon glyphicon-search glyph-spacing-right address-lookup-color"></span>Learn which aquifer sustains your area today.<a class="nav-link-address-lookup" href="{{urlAddressLookup}}" title="Aquifer Address Lookup" target="_blank" ng-click="linkModelFunc(urlAddressLookup)">Look up your address online here!</a></span></p>
 		</div>     
 	</div>
 
@@ -70,7 +70,7 @@
     <span class="slideno"><h1>Recharge Data Interactive</h1></span>            
     <a class="button-scroll" data-slide="7" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
-      <p alt="">A data interactive module based on annual recharge gauge data.</p>
+      <!-- <p alt="">A data interactive module based on annual recharge gauge data.</p> -->
     </div>  
   </div>
 
@@ -78,7 +78,7 @@
 	<div data-parallax-background class="slide" id="ck-slide7" data-slide="7" data-parallax-ratio="0.5">
 		<!-- <span class="slideno"><h1>Descent</h1></span>             -->
     <a class="button-scroll" data-slide="8" title="" data-ng-click="buttonClick($event)"></a>
-    <div class="wrapper">
+    <div class="wrapper" id="descent">
       <p alt="">A caver descends more than 150 feet to the bottom of the sinkhole, following a similar path that rainfall and runoff would take.</p>
 		</div>  
 	</div>
@@ -86,7 +86,7 @@
 	<!-- Slide 8 -->
 	<div data-parallax-background class="slide" id="ck-slide8" data-slide="8" data-parallax-ratio="0.5">
 		<!-- <span class="slideno"><h1>Watertable</h1></span>                 -->
-    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <a class="button-scroll reverse" id="" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">As the water percolates through the rocks it eventually reaches the water table, or point which the limestone is completely saturated.  From here the water moves deeper underground, flowing generally north and east towards discharge points at thousands of water wells, and some of the largest spring systems in Texas.</p>
 		</div> 
