--- a/app/views/conservation.html
+++ b/app/views/conservation.html
@@ -81,7 +81,7 @@
 
   <!-- Slide 8 -->
   <div data-parallax-background class="slide" id="cons-slide8" data-slide="8" data-parallax-ratio="0.5">
-    <span class="slideno"><h1>Well Data Interactive</h1></span>               
+    <span class="slideno"><h1>Well Gauge Data Interactive</h1></span>               
     <a class="button-scroll" data-slide="9" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <!-- <eaa-aquifers-boundary-map></eaa-aquifers-boundary-map> -->
@@ -95,7 +95,7 @@
   <!-- Slide 9 -->
   <div data-parallax-background class="slide" id="cons-slide9" data-slide="9" data-parallax-ratio="0.5">
     <!-- <span class="slideno"><h1>Habitat Conservation Plan</h1></span>                -->
-    <a class="button-scroll" id="reverse" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
+    <a class="button-scroll reverse" id="" data-slide="0" title="" data-ng-click="buttonClick($event)"></a>
     <div class="wrapper">
       <p alt="">The Edwards Aquifer region found a way to come together in order to meet the needs of a hugely diverse set of interests.  The Habitat Conservation Plan provides certainty to the region by affirming local control over use of the Edwards Aquifer.</p>
     </div>
